--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*gradient + animation code by manuel pinto*/
 .gradient-background {
   background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);
   background-size: 180% 180%;
